name:                wintest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neongreen/wintest#readme
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
copyright:           2017 Artyom
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wintest
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    CF
  default-language:    Haskell2010
  build-depends:
    base,
    Win32
